Fix AWS_ reserved env var by using BEDROCK_REGION

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,10 @@ NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_...
 STRIPE_PRICE_ID=price_...
 
 # --- Bedrock AI Assistant ---
-AWS_REGION=us-west-2
+# BEDROCK_REGION is used by the AI route; on AWS Amplify you
+# must NOT define variables starting with "AWS_", so use this
+# name instead of AWS_REGION in the hosted environment.
+BEDROCK_REGION=us-west-2
 BEDROCK_MODEL_ID=anthropic.claude-3-haiku-20240307-v1:0
 
 # --- Public URL (used for redirects) ---
