--- a/amplify.yml
+++ b/amplify.yml
@@ -6,7 +6,7 @@ backend:
       commands:
         - 'npm ci --cache .npm --prefer-offline'
         - 'echo "Branch: $AWS_BRANCH AppId: $AWS_APP_ID"'
-        - 'npx ampx@latest pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID'
+        - 'npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID'
 
 frontend:
   phases:
