--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@aws-amplify/adapter-nextjs": "^1.5.2"
   },
   "devDependencies": {
+    "@aws-amplify/backend-cli": "^1.8.1",
     "typescript": "^5.6.3",
     "@types/node": "^20.17.6",
     "@types/react": "^19.0.1",
