--- a/amplify.yml
+++ b/amplify.yml
@@ -4,7 +4,7 @@ backend:
   phases:
     build:
       commands:
-        - 'npm ci --cache .npm --prefer-offline'
+        - 'npm install'
         - 'echo "Branch: $AWS_BRANCH AppId: $AWS_APP_ID"'
         - 'npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID'
 
@@ -12,7 +12,7 @@ frontend:
   phases:
     preBuild:
       commands:
-        - 'npm ci --cache .npm --prefer-offline'
+        - 'npm install'
     build:
       commands:
         - 'npm run build'
